Added:   Set-ZabbixHost   Add-ZabbixHost   Save-ZabbixAuthCode   Added Action commands.   Added build and publish scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "authcode",
         "userprofile",
         "Zabbix"
+    ],
+    "cSpell.enableFiletypes": [
+        "powershell"
     ]
 }
