Changes to be committed: 	modified:   .vscode/settings.json 	modified:   Zabbix_Powershell.psm1 	modified:   public/Authorize.ps1
Secure API key storage functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "authcode",
+        "Creds",
+        "hostgroup",
+        "hostid",
         "userprofile",
         "Zabbix"
     ],
